tests/expression/list_type_faults.sy
from list use (push)

start :: fn do
    a := [1, 2]
    push(a, "str")
    b : [str] = [1, "str"]
    c := [1, "str"]
    push(c, 0.1)
end
// error: $Mismatch
